@@ -45,6 +45,16 @@
   #define _LARGEFILE_SOURCE
 #endif
 
+// The symbols SEQAN_IS_64_BIT and SEQAN_IS_32_BIT can be used to check
+// whether we are on a 32 bit or on a 64 bit machine.
+#if defined(__amd64__) || defined(__x86_64__) || defined(__ia64__)
+#define SEQAN_IS_64_BIT 1
+#define SEQAN_IS_32_BIT 0
+#else
+#define SEQAN_IS_64_BIT 0
+#define SEQAN_IS_32_BIT 1
+#endif  // #if defined(__amd64__) || defined(__x86_64__) || defined(__ia64__)
+
 //#include <unistd.h>
 #include <inttypes.h>
 
